# VulkanRainyStreetDemo

./: .gitignore  CMakeLists.txt  first.jai  rainy_street.jai  readme.md
data/: MeshShader.frag  MeshShader.hlsl  MeshShader.vert  PhongMeshShader.hlsl
libs/FiberTaskingLib/benchmarks/empty/: empty.cpp
libs/KiwiTasker/: .gitignore  CMakeLists.txt  README.md
libs/KiwiTasker/example/: CMakeLists.txt  main.cpp
libs/KiwiTasker/include/kiwi/: KIWI_Array.h  KIWI_Atomics.h  KIWI_Counter.h  KIWI_CounterPool.h  KIWI_FiberPool.h  KIWI_FiberWorkerStorage.h  KIWI_Job.h  KIWI_JobPriority.h  KIWI_Queue.h  KIWI_Scheduler.h  KIWI_SpinLock.h  KIWI_Std.h  KIWI_ThreadImpl.h  KIWI_ThreadImplPthread.h  KIWI_ThreadImplWinThread.h
libs/KiwiTasker/src/: KIWI_Array.c  KIWI_Counter.c  KIWI_CounterPool.c  KIWI_FiberPool.c  KIWI_FiberWorkerStorage.c  KIWI_Queue.c  KIWI_Scheduler.c  KIWI_SpinLock.c  KIWI_ThreadImplPthread.c  KIWI_ThreadImplWinThread.c
src/: EntryJob.cpp  EntryJob.h  Game.cpp  Game.h  GameCommandParameters.cpp  GameCommandParameters.h  GameFrameRender.cpp  GameFrameRender.h  GameMap.cpp  GameMap.h  GameMapRenderer.cpp  GameMapRenderer.h  GameTimer.cpp  GameTimer.h  GameUtils.h  GameWindow.cpp  GameWindow.h  GeometryLoader.cpp  GeometryLoader.h  ImGuiRenderer.cpp  ImGuiRenderer.h  MeshRenderer.cpp  MeshRenderer.h  PhongMeshRenderer.cpp  PhongMeshRenderer.h  RenderDefines.h  Singleton.h  VmaUsage.cpp  VrsdStd.h  VulkanFrameResources.cpp  VulkanFrameResources.h  VulkanInitializeJobs.cpp  VulkanInitializeJobs.h  VulkanObjects.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSharedResources.cpp  VulkanSharedResources.h  VulkanSharedResourcesWorkerThread.cpp  VulkanSharedResourcesWorkerThread.h  (+6 more)
